# semantic-kernel-plugins

./: README.md  pyproject.toml
python/: .gitignore  README.md  build_package.py  dev_install.py  example_pkg_usage.py  example_usage.ipynb  example_usage.py  publish_to_pypi.py  pyproject.toml  setup.py
python/semantic_kernel_plugins/: __init__.py
python/semantic_kernel_plugins/logger/: __init__.py  sk_logger.py
python/semantic_kernel_plugins/plugins/calculator/: __init__.py  calculator.py
python/semantic_kernel_plugins/plugins/mongodb/: __init__.py  mongodb_plugin.py
python/semantic_kernel_plugins/plugins/postgre/: __init__.py  postgre.py
python/semantic_kernel_plugins/plugins/python/: python_code_generator.py
python/semantic_kernel_plugins/plugins/shell/: __init__.py  shell_plugin.py
python/semantic_kernel_plugins/plugins/web/: __init__.py  google_web_search.py  serpapi_web_search.py  tavily_web_search.py
python/semantic_kernel_plugins/tools/: __init__.py  python_executor.py
python/semantic_kernel_tools/: __init__.py
python/semantic_kernel_tools/plugins/: __init__.py
python/semantic_kernel_tools/plugins/python/: __init__.py  python_code_generator.py
python/semantic_kernel_tools/plugins/web/: __init__.py
src/: main.py
src/logger/: sk_logger.py
src/plugins/: python_code_generator.py  python_executor.py  tavily_web_search.py
